mcfootball-generator/src/test/resources/football/invalid/MatchDateOutOfSeason.fb
/* Invalid — triggers 0xFC013: match date year outside season "2025-2026". */
footballsite DateOutOfSeasonTest {

  navigation { Testland; }

  country Testland {
    league TestLeague season "2025-2026" {
      match {
        date    "2027-03-15"
        time    "15:00"
        home    "Team Alpha"   ("CityA")
        away    "Team Beta"    ("CityB")
        score   1 - 0
        stadium "Test Arena"
      }
    }
  }

}
